# KawaiiBot-hs

./: Bot.hs  Client.hs  Config.example.hs  Config.hs.example  Core.hs  IRC.hs  KawaiiBot.cabal  Main.hs  README.md  Types.hs  Utils.hs
KawaiiBot/: Bot.hs  IRC.hs  Types.hs  Utils.hs
