name:               KawaiiBot
version:            0.1
Synopsis:           A lewd IRC bot that performs Otaku related tasks.
Author:             Shou
Maintainer:         gnusokyo@gmail.com
Copyright:          Shou
License:            GPL-2
License-File:       LICENSE
Cabal-Version:      >= 1.2
Build-Type:         Simple

Executable kawaiibot-client
    GHC-Options:
        -threaded
    Build-Depends:
        base,
        curl,
        cgi,
        HTTP,
        json,
        MissingH,
        mtl,
        network,
        process,
        random,
        regex-compat,
        text,
        utf8-string,
        xml
    Main-Is:
        Main.hs

Executable kawaiibot-core
    GHC-Options:
        -threaded
    Build-Depends:
        text,
        time,
        directory
    Main-Is:
        Core.hs
