name:               KawaiiBot
version:            0.1.5
Synopsis:           The lewd IRC bot that does useless things.
Author:             Shou
Maintainer:         shou@gnusokyo
Copyright:          Shou
License:            GPL-2
License-File:       LICENSE
Cabal-Version:      >= 1.2
Build-Type:         Simple

Executable kawaiibot-client
    GHC-Options:
        -threaded
    Build-Depends:
        base,
        curl,
        cgi,
        HTTP,
        json,
        MissingH,
        mtl,
        network,
        process,
        random,
        regex-compat,
        text,
        utf8-string,
        xml
    Main-Is:
        Client.hs

Executable kawaiibot-core
    GHC-Options:
        -threaded
    Build-Depends:
        text,
        time,
        directory
    Main-Is:
        Core.hs

Library
    Exposed-Modules:
        KawaiiBot.Bot
        KawaiiBot.IRC
        KawaiiBot.Types
        KawaiiBot.Utils
